Добавлены функция получения всех данных пользователя по id
