# internal/user.go
@@ -2,24 +2,27 @@ package internal
 
 import (
 	"Astra_Linux_chat/internal/database"
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"strconv"
 )
 
-func (s *Server) getUser(c *gin.Context) { // получаем юзера по айди
-	idStr := c.Param("id")
-	id, _ := strconv.Atoi(idStr)
-
-	// TODO: надо вытаскивать юзера из бд
-
-	user := database.User{
-		UserId:    id,
-		Email:     "user@example.com",
-		Password:  "secret",
-		UserName:  "User",
-		Photo:     "photo.jpg",
-		CreatedAt: "2022-01-01T00:00:00Z",
+func (s *Server) getUserById(c *gin.Context) { // получаем юзера по айди
+	userIdStr := c.Query("id")
+	userId, err := strconv.Atoi(userIdStr)
+	if err != nil {
+		fmt.Println("getUserById:", err)
+		c.JSON(http.StatusBadRequest, err)
+		return
 	}
+
+	user, err := database.GetUserById(s.DB, userId)
+	if err != nil {
+		fmt.Println("getUserById:", err)
+		c.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
 	c.JSON(http.StatusOK, user)
 }
